# Labirinth-ROS-2

./: README.md
ras_robot_simulation/: CMakeLists.txt  README.md  package.xml
ras_robot_simulation/urdf/: roda.xacro  roda_boba.xacro
template_ros_2_package/: CMakeLists.txt  package.xml
template_ros_2_package/launch/: motor_commander.launch.py  robot_full.launch.py
template_ros_2_package/src/: camera.cpp  central.cpp  motor_commander.cpp  sensors.cpp
